--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,3 +13,12 @@
     }
   ]
 }
+{
+  "name": "Test1",
+  "email": "test1@example.com"
+}
+{
+  "message": "Registrado exitosamente",
+  "user_id": 1,
+  "qr_code": "..."
+}
